<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Challenge Room API</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_enter_isbn">Enter ISBN of the book</string>
    <string name="hint_enter_title">Enter title of the book</string>
    <string name="hint_enter_author">Enter author of the book</string>

    <string name="button_create">Create</string>
    <string name="button_delete_all">Delete All</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_apply_changes">Apply Changes</string>

    <string name="setting_theme_color_title">Theme Color</string>
    <string name="setting_theme_color_summary">Choose a theme color to be used through the application</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_language_summary">Choose a language to be used through the application</string>

    <string name="setting_theme_color_1">Red</string>
    <string name="setting_theme_color_2">Green</string>
    <string name="setting_theme_color_3">Blue</string>

    <string name="setting_language_1" translatable="false">English</string>
    <string name="setting_language_2" translatable="false">简体中文</string>
    <string name="setting_language_3" translatable="false">繁體中文</string>

    <string name="message_setting_change_success">Settings changed successfully!</string>
    <string name="message_setting_change_fail">Settings changed failed!</string>
    <string name="message_enter_all_fields">Please enter ALL fields!</string>
    <string name="message_delete_all">Delete all books</string>
    <string name="message_delete">%1$s DELETED</string>
    <string name="message_update">%1$s UPDATED</string>
    <string name="message_add">%1$s ADDED</string>
    <string name="message_success">%1$s successfully!</string>
    <string name="message_error">ERROR! %1$s</string>

    <string name="image_book">Book</string>
    <string name="image_settings">Settings</string>

    <string name="title_main_activity">\ Book Database</string>
    <string name="title_detail_activity">Edit Book</string>
    <string name="title_settings_activity">Settings</string>

    <string name="warning_no_book">No book on the bookshelf</string>
    <string name="warning_no_isbn">Missing ISBN</string>
    <string name="warning_no_title">Missing Title</string>
    <string name="warning_no_author">Missing Author</string>

    <string name="tostring_book">\"%1$s\" by %2$s</string>
    <string name="placeholder">Placeholder</string>
</resources>
