<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Change the Theme">
        <ListPreference
            android:defaultValue="green"
            android:entries="@array/themeColor"
            android:entryValues="@array/themeColorValue"
            android:key="themeColor"
            android:summary="@string/setting_theme_color_summary"
            android:title="@string/setting_theme_color_title" />
        <ListPreference
            android:defaultValue="english"
            android:entries="@array/language"
            android:entryValues="@array/languageValue"
            android:key="language"
            android:summary="@string/setting_language_summary"
            android:title="@string/setting_language_title" />
    </PreferenceCategory>
</PreferenceScreen>